# website

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  Dockerfile  README.md  flake.nix  nix-syntax.yml  start.sh
.agents/skills/website-development/: SKILL.md
.forgejo/workflows/: build.yml
.github/: copilot-instructions.md
.github/workflows/: build.yml
assets/: blog.css  blog_post.css  home.css  main.css  projects.css  theme_toggle.css
src/: backend.rs  main.rs  models.rs
src/backend/: fastfetch.rs  mod.rs
src/components/: back_to_top.rs  fastfetch.rs  footer.rs  github_icon.rs  github_link.rs  linkedin_link.rs  mod.rs  navbar.rs  project_card.rs  table_of_contents.rs  theme_toggle.rs
src/utils/: date.rs  highlighter.rs  mod.rs
src/views/: blog.rs  blog_post.rs  home.rs  mod.rs  navbar.rs  projects.rs
