[package]
name = "website"
version = "0.1.0"
authors = ["Rui Jiang <me@ruijiang.me>"]
edition = "2024"

[dependencies]
dioxus = { version = "0.7", features = ["router", "fullstack"] }
pulldown-cmark = "0.13"
dioxus-free-icons = { version = "0.10", features = [
  "font-awesome-brands",
  "font-awesome-solid",
] }

[features]
default = ["web"]
web = ["dioxus/web"]
server = ["dioxus/server"]
