[package]
name = "website"
version = "0.1.0"
authors = ["Rui Jiang <me@ruijiang.me>"]
edition = "2024"

[dependencies]
dioxus = { version = "0.7", features = ["router", "fullstack"] }
dioxus-free-icons = { version = "0.10", features = [
  "font-awesome-brands",
  "font-awesome-solid",
] }
pulldown-cmark = { version = "0.13", optional = true }
scraper = { version = "0.25" }
tokio = { version = "1", features = [
  "fs",
  "rt-multi-thread",
  "macros",
], optional = true }

[features]
default = ["web"]
web = ["dioxus/web"]
server = ["dioxus/server", "dep:pulldown-cmark", "dep:tokio"]
